# schauwerk

./: .gitignore  AGENTS.md  Makefile  README.md  agent-policy.yaml  pyproject.toml  repo.meta.yaml
.staging/: discovery-import.patch
demos/: grabowski-board.dsl
docs/: ecosystem-map-handoff.md  grabowski-demo-board.md  index.md  registry.md  roadmap.md
registry/: policies.yaml  projects.yaml  publications.yaml  regions.yaml  sources.yaml  surfaces.yaml  views.yaml
schemas/: adapter-observation.v1.schema.json  backup-manifest.v1.schema.json  grabowski-operational-observation.v1.schema.json  maintenance-proposal.v1.schema.json  miro-app-asset-receipt.v1.schema.json  miro-managed-image-delete-receipt.v1.schema.json  miro-managed-image.v1.schema.json  miro-mcp-tool-reference.v1.schema.json  miro-native-bundle.v1.schema.json  miro-visual-truth-context.v1.schema.json  miro-web-sdk-companion-release.v1.schema.json  miro-web-sdk-companion.v1.schema.json  operations-health.v1.schema.json  policy.v1.schema.json  presentation.v1.schema.json  project.v1.schema.json  publication-boundary.v1.schema.json  publication.v1.schema.json  region.v1.schema.json  representation-delivery-receipt.v1.schema.json  representation-input.v1.schema.json  search-index.v1.schema.json  software-pilot-input.v1.schema.json  source-observation-set.v1.schema.json  source-observation.v1.schema.json  source.v1.schema.json  surface.v1.schema.json  view.v1.schema.json  visual-board.v2.schema.json  visual-quality.v2.schema.json  visual-regression.v1.schema.json  visual-review.v2.schema.json  (+1 more)
(+383 files in other folders)
