[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "schauwerk"
version = "0.1.0"
description = "Visual work, projection, and publication layer for Heimgewebe."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.28,<1",
  "jsonschema>=4.23",
  "mcp>=1.28,<2",
  "platformdirs>=4.3,<5",
  "python-pptx>=1.0,<2",
  "PyYAML>=6.0.2",
  "reportlab>=4.2,<5",
]

[project.optional-dependencies]
dev = ["pytest>=8.3", "ruff>=0.15"]

[project.scripts]
schauwerk = "schauwerk.runner:main"
schauwerk-miro-companion-serve = "schauwerk.surfaces.miro.companion_server:main"
schauwerk-registry-validate = "schauwerk.registry_validation:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"schauwerk.schemas" = ["*.json"]
"schauwerk.web_sdk_assets" = ["*.html", "*.js", "*.css", "*.svg"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
src = ["src", "scripts", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
